--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.9.5",
-    "recharts": "^2.15.4"
+    "recharts": "^2.15.4",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
